deployments/backup-manager/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backup-manager-http
  namespace: portal
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`backups.seadogger-homelab`)
      kind: Rule
      services:
        - name: backup-manager
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backup-manager-https
  namespace: portal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`backups.seadogger-homelab`)
      kind: Rule
      services:
        - name: backup-manager
          port: 80
  tls:
    secretName: backup-manager-tls
